# PhotoManager

./: CMakeLists.txt  duplicateanalyzer.cpp  duplicateanalyzer.h  duplicatedialog.cpp  duplicatedialog.h  foldermanager.cpp  foldermanager.h  imagegridwidget.cpp  imagegridwidget.h  mainwindow.cpp  mainwindow.h  projectmanager.cpp  projectmanager.h  syncdialog.cpp  syncdialog.h  thumbnailservice.cpp  thumbnailservice.h  zoomableimagelabel.cpp  zoomableimagelabel.h
